<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Luki</string>

    // app name in the APK
    <string name="title_activity_maps">Luki App</string>
    <string name="btn_post">Publicar</string>

    <string name="titleSingUp">Regístrate</string>
    <string name="buttonSingUp">Listo</string>
    <string name="inputTextName">Nombre</string>
    <string name="inputTextLastName">Apellido</string>
    <string name="inputTextPhone">Teléfono</string>
    <string name="inputTextEmail">Correo</string>
    <string name="titleSignIn">Bienvenido a Luki</string>
    <string name="password">Contraseña</string>
    <string name="no_estas_registrado">¿No estás registrado?</string>
    <string name="registrate">Regístrate</string>

    <string name="about">Acerca de</string>
    <string name="exit">Salir</string>
    <string name="post">Publicar</string>
    <string name="about_message">
        Luki es una app móvil diseñada por participantes de Holberton School en su ultimo trimestre,
        esperamos que la disfrutes mucho!!
    </string>
    <string name="previous">previous</string>
    <string name="about_tittle">About</string>
    <string name="free_mode">Modo Libre</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">Registro</string>
    <string name="login">Login</string>

    <string name="default_zero">0</string>
    <string name="stratum">Estrato</string>
    <string name="parking">Parqueaderos</string>
    <string name="bathRooms">Baños</string>
    <string name="_1000000">1000000</string>
    <string name="format_1000000">1.000.000,00</string>
    <string name="example_address">Calle 202 #89–45</string>
    <string name="area_m2">Área (m2)</string>
    <string name="bedRooms">Habitaciones</string>
    <string name="address">Dirección</string>
    <string name="atlantico">Atlántico</string>
    <string name="Barranquilla">Barranquilla</string>
    <string name="sector">Barrio o sector</string>
    <string name="city">Ciudad</string>
    <string name="estado">Departamento</string>
    <string name="price">Precio</string>
    <string name="example_desc">Cerca a la vía principal, buena ubicación</string>
    <string name="select">Selecciona…</string>
    <string name="desc">Descripción</string>
    <string name="location">Ubicación</string>
    <string name="details">Detalles</string>

    <string name="rent">Arriendo</string>
    <string name="img_contentDesc">Imágenes de la casa o apartamento</string>
    <string name="barranquilla_alto_prado">Barranquilla, Alto Prado</string>
    <string name="contact">Contacto</string>
    <string name="ex_300654321">300654321</string>
    <string name="example_email">ejemplo@ejemplo.com</string>
    <string name="floor">Piso</string>
    <string name="type">Tipo</string>

    <string name="ex_buildName">Edificio La Mar</string>
    <string name="building_name">Nombre del edificio</string>
    <string name="img_header">Imagen de encabezado</string>
    <string name="img_bottom">Imagen de bottom</string>
    <string name="title_post_rent">Publica tu renta</string>
    <string name="luki">LUKI</string>
    <string name="lukilogo">LukiLogo</string>
    <string name="designed_by_target_devs">Diseñado por Target Devs</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="nav_header_desc">Imagen de perfil</string>
    <string name="nav_header_title">Mauricio Contreras</string>
    <string name="nav_header_subtitle">1822@holbertonschool.com</string>
    <string name="menu_options">Menu</string>
    <string name="Luki_options_desc">
        <big><b>Luki</b></big>
        <small>está donde tú estás, escoge si necesitas buscar o publicar tu propiedad:</small>
    </string>
    <string name="quiero_publicar">Quiero Publicar</string>
    <string name="luki_busqueda">Luki Búsqueda</string>
</resources>