<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lukihome"
    android:keepScreenOn="true">

    <TextView
        android:id="@+id/titleSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/titleSignIn"
        android:textColor="#ffffff"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmail_signIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextEmail_signIn"
        android:layout_width="319dp"
        android:layout_height="63dp"
        android:layout_marginBottom="48dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/inputTextEmail"
        android:inputType="textEmailAddress"
        android:textColorHighlight="@color/white"
        android:textColorHint="#bbbbbb"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword_signIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextPassword_signIn"
        android:layout_width="319dp"
        android:layout_height="63dp"
        android:layout_marginBottom="64dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHighlight="@color/white"
        android:textColorHint="#bbbbbb"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="217dp"
        android:layout_height="63dp"
        android:layout_marginBottom="184dp"
        android:text="@string/buttonSingUp"
        app:backgroundTint="@color/secondary_purple"
        app:cornerRadius="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/no_estas_registrado"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/registre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="16dp"
        android:text="@string/registrate"
        android:textColor="#FF5722"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>