<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="600dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="36dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/rent_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="36dp"
                    android:text="@string/Barranquilla"
                    android:textSize="22sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="320dp"
                    android:layout_height="180dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/img_contentDesc"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rent_title"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/rent_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/format_1000000"
                    android:textSize="30sp"
                    app:drawableLeftCompat="@drawable/ic_price"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2" />

                <TextView
                    android:id="@+id/rent_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="37dp"
                    android:text="@string/rent"
                    app:layout_constraintStart_toEndOf="@+id/rent_price"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2" />

                <TextView
                    android:id="@+id/rent_city_sector"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/barranquilla_alto_prado"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rent_price" />

                <TextView
                    android:id="@+id/rent_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/example_address"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rent_city_sector" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="320dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="12dp"
                    android:padding="6dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rent_address">

                    <TextView
                        android:id="@+id/rent_bedrooms"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/bedRooms"
                        app:drawableLeftCompat="@drawable/baseline_hotel_24"
                        app:layout_constraintEnd_toStartOf="@+id/textView13"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/area_m2"
                        app:drawableLeftCompat="@drawable/baseline_aspect_ratio_24"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/rent_bedrooms"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/rent_bedrooms2"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:gravity="center_vertical"
                        android:text="@string/bathRooms"
                        app:drawableLeftCompat="@drawable/baseline_bathtub_24"
                        app:layout_constraintEnd_toStartOf="@+id/textView13"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/rent_bedrooms" />

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:gravity="center_vertical"
                        android:text="@string/floor"
                        app:drawableLeftCompat="@drawable/baseline_apartment_24"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/rent_bedrooms"
                        app:layout_constraintTop_toBottomOf="@+id/textView13" />

                    <TextView
                        android:id="@+id/rent_bedrooms3"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:gravity="center_vertical"
                        android:text="@string/parking"
                        app:drawableLeftCompat="@drawable/baseline_garage_24"
                        app:layout_constraintEnd_toStartOf="@+id/textView13"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/rent_bedrooms2" />

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:gravity="center_vertical"
                        android:text="@string/stratum"
                        app:drawableLeftCompat="@drawable/baseline_person_pin_circle_24"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/rent_bedrooms"
                        app:layout_constraintTop_toBottomOf="@+id/textView14" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/rent_title_contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="6dp"
                    android:text="@string/contact"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

                <TextView
                    android:id="@+id/rent_cell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="6dp"
                    android:text="@string/ex_300654321"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rent_title_contact" />

                <TextView
                    android:id="@+id/rent_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:text="@string/example_email"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rent_cell" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>