<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1">

    <TextView
        android:id="@+id/titleSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/titleSingUp"
        android:textColor="#fff"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="36dp"
        android:paddingBottom="36dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleSignUp"
        app:layout_constraintVertical_bias="0.7">

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="319dp"
            android:layout_height="50dp"
            android:layout_marginBottom="26dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/inputTextName"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/editTextLastName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextLastName"
            android:layout_width="319dp"
            android:layout_height="50dp"
            android:layout_marginBottom="26dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/inputTextLastName"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/editTextPhone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="319dp"
            android:layout_height="50dp"
            android:layout_marginBottom="26dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/inputTextPhone"
            android:inputType="phone"
            app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="319dp"
            android:layout_height="50dp"
            android:layout_marginBottom="26dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/inputTextEmail"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="319dp"
            android:layout_height="50dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="150dp"
        android:layout_height="63dp"
        android:layout_marginBottom="28dp"
        android:text="@string/buttonSingUp"
        app:backgroundTint="@color/main_purple"
        app:cornerRadius="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>