<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lukihome">

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/border_radius"
        android:text="@string/quiero_publicar"
        android:textColor="@color/secondary_purple"
        android:textSize="18sp"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintWidth_percent="0.6" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@drawable/border_radius"
        android:text="@string/luki_busqueda"
        android:textColor="@color/secondary_purple"
        android:textSize="18sp"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.6" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Luki_options_desc"
        android:textColor="@color/grey"
        android:textSize="26sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.75" />
</androidx.constraintlayout.widget.ConstraintLayout>